GNOME Bugzilla – Bug 629781
[PATCH] dbus timeout is a bit long
Last modified: 2011-03-27 09:00:02 UTC
1. Start a unique app (say, empathy) 2. Make it unresponsive (SIGSTOP is the easy way) 3. Start it again 4. ... 30 seconds passes ... (empathy:9853): Unique-DBus-WARNING **: Error while sending message: Did not receive a reply. Possible causes include: the remote application did not send a reply, the message bus security policy blocked the reply, the reply timeout expired, or the network connection was broken. The timeout really should be tamped down here, perhaps to a couple of seconds... realistically, if the app isn't responding at that point, it's not going to.
Created attachment 170504 [details] [review] Set default timeout to 3 seconds
Thanks, fixed in master